<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="190dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:text="@string/itemTitle"
        android:layout_marginEnd="15dp"
        android:maxLines="1"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_below="@+id/name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/itemImage" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/emptyPrice"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/itemImage" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/itemDescription"
        android:textSize="16sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/itemImage"
        android:layout_toStartOf="@+id/buyNowButton"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/border2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentBottom="true"
        android:background="#808080" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buyNowButton"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/buy_now"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent" />

</RelativeLayout>